# colorui.rs

./: Cargo.toml  README.md  colorui.service  deploy.sh  run.sh
hw/: README.md  platformio.ini
hw/src/: main.cpp
src/: main.rs
web/: README.md  package.json  vue.config.js
web/public/: index.html
web/src/: App.vue  main.js
