[package]
name = "colorui"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.7"
actix-files = "0.1.4"
env_logger = "0.6.2"
serialport = "3.3.0"
actix-web-actors = "1.0.2"
actix = "0.8.3"
log = "0.4.8"
serde = "1.0.100"
serde_json = "1.0.40"
palette = "0.4.1"
failure = "0.1.5"
